--- a/Projet POO.vcxproj
+++ b/Projet POO.vcxproj
@@ -114,12 +114,24 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AccesBDD.cpp" />
+    <ClCompile Include="Article.cpp" />
+    <ClCompile Include="Client.cpp" />
+    <ClCompile Include="Commande.cpp" />
+    <ClCompile Include="Manager.cpp" />
     <ClCompile Include="MyForm.cpp" />
+    <ClCompile Include="Personel.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AccesBDD.h" />
+    <ClInclude Include="Article.h" />
+    <ClInclude Include="Client.h" />
+    <ClInclude Include="Commande.h" />
+    <ClInclude Include="Manager.h" />
     <ClInclude Include="MyForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
+    <ClInclude Include="Personel.h" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
