--- a/Projet POO.vcxproj.filters
+++ b/Projet POO.vcxproj.filters
@@ -54,6 +54,12 @@
     <ClCompile Include="Personel.cpp">
       <Filter>Fichiers sources\DefClasse\classeFille</Filter>
     </ClCompile>
+    <ClCompile Include="Accueil.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Statistique.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyForm.h">
@@ -80,5 +86,14 @@
     <ClInclude Include="Main.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="Accueil.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="Statistique.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\..\..\Desktop\sqlite.dll" />
   </ItemGroup>
 </Project>
