--- a/Projet POO.vcxproj.filters
+++ b/Projet POO.vcxproj.filters
@@ -62,9 +62,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="MyForm.h">
-      <Filter>Fichiers d%27en-tête</Filter>
-    </ClInclude>
     <ClInclude Include="Manager.h">
       <Filter>Fichiers d%27en-tête\ClasseUtilisationBDD</Filter>
     </ClInclude>
@@ -86,11 +83,26 @@
     <ClInclude Include="Main.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="Commande1.h">
+      <Filter>Fichiers d%27en-tête\Interface HM</Filter>
+    </ClInclude>
     <ClInclude Include="Accueil.h">
-      <Filter>Fichiers d%27en-tête</Filter>
+      <Filter>Fichiers d%27en-tête\Interface HM</Filter>
+    </ClInclude>
+    <ClInclude Include="CLient1.h">
+      <Filter>Fichiers d%27en-tête\Interface HM</Filter>
+    </ClInclude>
+    <ClInclude Include="MyForm.h">
+      <Filter>Fichiers d%27en-tête\Interface HM</Filter>
     </ClInclude>
     <ClInclude Include="Statistique.h">
-      <Filter>Fichiers d%27en-tête</Filter>
+      <Filter>Fichiers d%27en-tête\Interface HM</Filter>
+    </ClInclude>
+    <ClInclude Include="Personnel.h">
+      <Filter>Fichiers d%27en-tête\Interface HM</Filter>
+    </ClInclude>
+    <ClInclude Include="Stock1.h">
+      <Filter>Fichiers d%27en-tête\Interface HM</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
