--- a/Projet POO.vcxproj
+++ b/Projet POO.vcxproj
@@ -135,14 +135,26 @@
     </ClInclude>
     <ClInclude Include="Article.h" />
     <ClInclude Include="Client.h" />
+    <ClInclude Include="CLient1.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="Commande.h" />
+    <ClInclude Include="Commande1.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="Main.h" />
     <ClInclude Include="Manager.h" />
     <ClInclude Include="MyForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
     <ClInclude Include="Personel.h" />
+    <ClInclude Include="Personnel.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="Statistique.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
+    <ClInclude Include="Stock1.h">
       <FileType>CppForm</FileType>
     </ClInclude>
   </ItemGroup>
@@ -157,11 +169,23 @@
     <EmbeddedResource Include="Accueil.resx">
       <DependentUpon>Accueil.h</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="CLient1.resx">
+      <DependentUpon>CLient1.h</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Commande1.resx">
+      <DependentUpon>Commande1.h</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MyForm.resx">
       <DependentUpon>MyForm.h</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Personnel.resx">
+      <DependentUpon>Personnel.h</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Statistique.resx">
       <DependentUpon>Statistique.h</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Stock1.resx">
+      <DependentUpon>Stock1.h</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
