Gestionaire de BDD ENFINNNNNN fonctionel + Maj des classes filles

--- a/Projet POO.vcxproj
+++ b/Projet POO.vcxproj
@@ -79,10 +79,10 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\Users\Joris\Desktop\SQLiteCpp-master;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>odbc32.lib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalDependencies />
+      <AdditionalDependencies>odbc32.lib</AdditionalDependencies>
       <SubSystem>NotSet</SubSystem>
       <EntryPointSymbol>
       </EntryPointSymbol>
@@ -166,6 +166,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\..\Desktop\sqlite.dll" />
+    <None Include="..\..\..\..\Downloads\msodbcsql(1).msi" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
