--- a/Projet POO.vcxproj.filters
+++ b/Projet POO.vcxproj.filters
@@ -95,5 +95,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\..\Desktop\sqlite.dll" />
+    <None Include="..\..\..\..\Downloads\msodbcsql(1).msi">
+      <Filter>Fichiers de ressources</Filter>
+    </None>
   </ItemGroup>
 </Project>
