ajout de stats et maj de plein de choses

--- a/Projet POO.vcxproj.filters
+++ b/Projet POO.vcxproj.filters
@@ -30,9 +30,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="MyForm.cpp">
-      <Filter>Fichiers sources</Filter>
-    </ClCompile>
     <ClCompile Include="AccesBDD.cpp">
       <Filter>Fichiers sources\DefClasse</Filter>
     </ClCompile>
@@ -58,6 +55,12 @@
       <Filter>Fichiers sources</Filter>
     </ClCompile>
     <ClCompile Include="Statistique.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Cl_Stat.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="stats.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
@@ -103,6 +106,9 @@
     </ClInclude>
     <ClInclude Include="Stock1.h">
       <Filter>Fichiers d%27en-tête\Interface HM</Filter>
+    </ClInclude>
+    <ClInclude Include="stats.h">
+      <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
