--- a/Projet POO.vcxproj
+++ b/Projet POO.vcxproj
@@ -121,11 +121,13 @@
     <ClCompile Include="Accueil.cpp" />
     <ClCompile Include="Article.cpp" />
     <ClCompile Include="Client.cpp" />
+    <ClCompile Include="Cl_Stat.cpp" />
     <ClCompile Include="Commande.cpp" />
     <ClCompile Include="Manager.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Personel.cpp" />
     <ClCompile Include="Statistique.cpp" />
+    <ClCompile Include="stats.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AccesBDD.h" />
@@ -153,6 +155,7 @@
     <ClInclude Include="Statistique.h">
       <FileType>CppForm</FileType>
     </ClInclude>
+    <ClInclude Include="stats.h" />
     <ClInclude Include="Stock1.h">
       <FileType>CppForm</FileType>
     </ClInclude>
