--- a/Projet POO.vcxproj
+++ b/Projet POO.vcxproj
@@ -126,6 +126,7 @@
     <ClCompile Include="Manager.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Personel.cpp" />
+    <ClCompile Include="sousCommande.cpp" />
     <ClCompile Include="Statistique.cpp" />
     <ClCompile Include="stats.cpp" />
   </ItemGroup>
@@ -152,6 +153,7 @@
     <ClInclude Include="Personnel.h">
       <FileType>CppForm</FileType>
     </ClInclude>
+    <ClInclude Include="sousCommande.h" />
     <ClInclude Include="Statistique.h">
       <FileType>CppForm</FileType>
     </ClInclude>
