--- a/Projet POO.vcxproj
+++ b/Projet POO.vcxproj
@@ -125,6 +125,7 @@
     <ClCompile Include="Manager.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Personel.cpp" />
+    <ClCompile Include="Stat.cpp" />
     <ClCompile Include="Statistique.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -150,6 +151,7 @@
     <ClInclude Include="Personnel.h">
       <FileType>CppForm</FileType>
     </ClInclude>
+    <ClInclude Include="Stat.h" />
     <ClInclude Include="Statistique.h">
       <FileType>CppForm</FileType>
     </ClInclude>
