Push ou g enlever le STATITIQUE DE THOMAS QUI EST VLA NUL ET ECLATER AU SOL ( il avait 1 truck a faire en 1 semianre merde quoi)

--- a/Projet POO.vcxproj
+++ b/Projet POO.vcxproj
@@ -83,7 +83,7 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies>odbc32.lib</AdditionalDependencies>
-      <SubSystem>NotSet</SubSystem>
+      <SubSystem>Console</SubSystem>
       <EntryPointSymbol>
       </EntryPointSymbol>
       <AdditionalLibraryDirectories>C:\Users\Joris\Desktop\SQLiteCpp-master;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
