--- a/Projet POO.vcxproj.filters
+++ b/Projet POO.vcxproj.filters
@@ -63,9 +63,6 @@
     <ClCompile Include="Stat.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
-    <ClCompile Include="sousCommande.cpp">
-      <Filter>Fichiers sources\DefClasse\classeFille</Filter>
-    </ClCompile>
     <ClCompile Include="InterfaceClient.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
@@ -77,6 +74,9 @@
     </ClCompile>
     <ClCompile Include="InterfaceCommande.cpp">
       <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="sousCommande.cpp">
+      <Filter>Fichiers sources\DefClasse</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
